--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "serverless-http": "^4.0.0"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^6.0.0"
   }
 }
