--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,7 @@
 service: clash-royale-api
 
+useDotenv: true
+
 provider:
   name: aws
   runtime: nodejs20.x
@@ -18,9 +20,9 @@ functions:
       - httpApi: '*'
 
 package:
-  exclude:
-    - node_modules/**
-    - .git/**
-    - frontend/**
-    - README.md
-    - .env
+  patterns:
+    - '!.git/**'
+    - '!frontend/**'
+    - '!README.md'
+    - '!.env'
+    - '!node_modules/**/aws-sdk/**'
