--- a/.gitignore
+++ b/.gitignore
@@ -52,11 +52,5 @@ Desktop.ini
 # PM2
 .pm2/
 
-# AWS
-*.csv
-.aws/
-.serverless/
-
-# Serverless Framework
-.serverless/
-serverless-state.json
+# Vercel
+.vercel
