--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "serverless-http": "^4.0.0"
-  },
-  "devDependencies": {
-    "serverless-dotenv-plugin": "^6.0.0"
+    "express": "^5.2.1"
   }
 }
