--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,25 @@
-# Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Environment variables
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
 
-# Logs
 *.log
 logs/
 
-# Editor and IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 .DS_Store
+Thumbs.db
 
-# Build output
 dist/
 build/
 out/
-
-# Test coverage
 coverage/
 .nyc_output/
 
-# Certificates and keys
 *.pem
 *.key
 *.cert
@@ -40,17 +27,7 @@ coverage/
 *.p12
 *.pfx
 
-# OS files
-Thumbs.db
-Desktop.ini
-
-# Temporary files
 *.tmp
 *.temp
 .cache/
-
-# PM2
 .pm2/
-
-# Vercel
-.vercel
